--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Assets/Substance.meta~Stashed changes.meta
+Assets/Substance.meta~Updated upstream.meta
